[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scène principale/UI/Menus de machines/bullet_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scène principale/UI/Menus de machines/ligne menu 1 icon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scène principale/UI/Menus de machines/ligne menu 2 icon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scène principale/Souris/Ressources/Afficheur de points/Icon point calcul.png" type="Texture" id=4]
[ext_resource path="res://Scène principale/Souris/Ressources/Afficheur de points/Icon point observation.png" type="Texture" id=5]
[ext_resource path="res://Scène principale/UI/Menus de machines/Gachette.gd" type="Script" id=6]

[node name="Gachette" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="Label" parent="Control/MarginContainer/Panel" index="0"]
text = "Gachette"

[node name="TirerT" parent="Control/HSplitContainer/Panel/VBoxContainer" index="0" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 630.0
margin_bottom = 69.0
pointValeur = [ "Observation" ]
ValeurMax = [ 2 ]

[node name="icon" parent="Control/HSplitContainer/Panel/VBoxContainer/TirerT" index="1"]
icon = ExtResource( 5 )

[node name="Panel" parent="Control/HSplitContainer/Panel/VBoxContainer/TirerT" index="2"]
margin_right = 630.0

[node name="TirerC" parent="Control/HSplitContainer/Panel/VBoxContainer" index="1" instance=ExtResource( 3 )]
margin_top = 84.0
margin_right = 630.0
margin_bottom = 153.0
pointValeur = [ "Observation", "Calcul" ]
ValeurMax = [ 2, 1 ]

[node name="icon 1" parent="Control/HSplitContainer/Panel/VBoxContainer/TirerC" index="1"]
icon = ExtResource( 5 )

[node name="icon 2" parent="Control/HSplitContainer/Panel/VBoxContainer/TirerC" index="3"]
icon = ExtResource( 4 )

[node name="Panel" parent="Control/HSplitContainer/Panel/VBoxContainer/TirerC" index="4"]
margin_right = 630.0

[connection signal="cout_point" from="Control/HSplitContainer/Panel/VBoxContainer/TirerT" to="." method="_on_TirerT_cout_point"]
[connection signal="cout_point" from="Control/HSplitContainer/Panel/VBoxContainer/TirerC" to="." method="_on_TirerC_cout_point"]

[editable path="Control/HSplitContainer/Panel/VBoxContainer/TirerT"]
[editable path="Control/HSplitContainer/Panel/VBoxContainer/TirerC"]
